<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    style="@style/Theme.AppCompat.NoActionBar"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/listEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="219dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/eventlist"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/startEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listEvents"
            android:layout_marginTop="78dp"
            android:background="@color/colorPrimary"
            android:text="@string/start_event" />

        <Button
            android:id="@+id/createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startEvent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="9dp"
            android:layout_marginRight="0dp"
            android:background="@color/colorPrimary"
            android:text="@string/create_event" />

        <Button
            android:id="@+id/eventsInProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="219dp"
            android:layout_marginEnd="136dp"
            android:layout_toRightOf="@+id/listEvents"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ongoing_events"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/viewPastEventsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="302dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="219dp"
            android:layout_marginEnd="17dp"
            android:layout_toRightOf="@+id/eventsInProgress"
            android:background="@color/colorPrimaryDark"
            android:text="@string/past_events"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/welcometext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="76dp"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="45dp"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/navigationView"
        android:layout_gravity = "start"
        style="@style/Theme.AppCompat.NoActionBar"
        >
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>